修复部分bug，优化部分功能

--- a/index.html
+++ b/index.html
@@ -848,6 +848,7 @@
                 id="bgClearBtn"
                 onclick="App.paper.clearBackground()"
                 class="hidden absolute top-2 right-2 z-10 bg-white/90 hover:bg-red-50 text-red-400 hover:text-red-600 rounded-full p-1 shadow-sm border border-gray-200 transition"
+                title="删除背景"
               >
                 <i class="ph ph-trash text-lg"></i>
               </button>
